--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                     <input type="number" id="pensio" required>
                 </div>
                 <div>
-                    <label for="fecha-pago">Fecha de Pago:</label>
+                    <label for="fecha-pago">Mes de Pensión:</label>
                     <input type="date" id="fecha-pago" required>
                 </div>
                 <div>
-                    <label for="comentarios">Comentarios (Motivo de No Pago):</label>
-                    <textarea id="comentarios"></textarea>
+                    <label for="comentarios">Mes de Retrasó</label>
+                    <input type="text" id="comentarios" placeholder="Ejemplo: enero, febrero, marzo">
                 </div>
 
                 <div class="actions">
@@ -48,5 +48,4 @@
         <script src="registro.js"></script>
     </div>
 </body>
-
 </html>
